[gd_scene load_steps=3 format=3 uid="uid://bfknp1fl0yne6"]

[ext_resource type="Script" path="res://Scenes/UI/BuyMenu/EquipmentPanel.gd" id="1_44n4x"]
[ext_resource type="Texture2D" uid="uid://cyt46xmj2adwl" path="res://Assets/Spade.png" id="1_ggmcd"]

[node name="EquipmentPanel" type="PanelContainer"]
script = ExtResource("1_44n4x")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(97.085, 26.855)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Spadar"
horizontal_alignment = 1

[node name="AmountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(97.085, 26.855)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Antal:0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_ggmcd")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(97.085, 26.855)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "100kr"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Köp"

[node name="DigPowerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(97.085, 26.855)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Grävkraft: 0.25 spadtag/s"
horizontal_alignment = 1
